--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -1,6 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
 
 :root {
+  --white0: #ffffff;
   --black0: #000000;
   --grey0: #848484;
   --grey1: #a4a4a4;
