--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -11,6 +11,7 @@
   > header {
     position: sticky;
     top: 0;
+    z-index: 99999999;
     width: 100%;
     display: flex;
     justify-content: space-between;
