--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -7,6 +7,9 @@
   --grey1: #a4a4a4;
   --grey2: #bdbdbd;
   --grey3: #d8d8d8;
+  --grey4: #efefef;
+  --blue0: #58acfa;
+  --blue1: #81bef7;
 }
 
 html,
