--- a/src/styles/templates/post.scss
+++ b/src/styles/templates/post.scss
@@ -18,8 +18,9 @@
   }
 
   > section {
+    font-size: 16px;
+    line-height: 24px;
     padding: 2rem 0;
-    line-height: 1.6rem;
 
     ul,
     ol {
