--- a/src/styles/components/post.scss
+++ b/src/styles/components/post.scss
@@ -7,26 +7,57 @@
   list-style: none;
 
   > .post-list-item {
-    &:not(:last-child) {
-      margin-bottom: 1rem;
-    }
+    padding: 2.4rem 0;
+    border-bottom: 1px solid var(--grey5);
 
     > a > article {
       width: 100%;
       display: flex;
       flex-direction: column;
-      padding: 1.6rem 0;
       box-sizing: border-box;
-      transition: text-shadow 0.4s, transform 0.4s;
+      transition: transform 0.4s;
 
       @media screen and (min-width: 800px) {
         &:hover {
-          text-shadow: 2px 2px 4px var(--grey3);
-          transform: translateY(-0.3rem);
+          transform: translateY(-4px);
+
+          > header > .responsive-thumbnail-wrapper {
+            > .content > .thumbnail {
+              transform: scale(1.03);
+            }
+          }
         }
       }
 
       > header {
+        > .responsive-thumbnail-wrapper {
+          position: relative;
+          width: 100%;
+          overflow: hidden;
+          margin-bottom: 1.5rem;
+          border: 1px solid var(--grey5);
+          border-radius: 12px;
+
+          > .padding {
+            padding-top: 50%;
+          }
+
+          > .content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+
+            > .thumbnail {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              transition: transform 0.4s;
+            }
+          }
+        }
+
         > .title {
           margin: 0;
           font-size: 1.6rem;
