--- a/src/styles/templates/post.scss
+++ b/src/styles/templates/post.scss
@@ -3,7 +3,7 @@
 
   > header {
     width: 100%;
-    border-bottom: 1px solid var(--grey4);
+    margin-bottom: 2.4rem;
 
     > .title {
       margin-bottom: 0.8rem;
@@ -48,12 +48,17 @@
         }
       }
     }
+
+    > .thumbnail {
+      width: 100%;
+      border: 1px solid var(--grey5);
+      border-radius: 12px;
+    }
   }
 
   > section {
     font-size: 16px;
     line-height: 24px;
-    padding: 2rem 0;
 
     ul,
     ol {
