--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -25,7 +25,7 @@
     }
 
     &.scrolled {
-      background-color: rgba(255, 255, 255, 0.7);
+      background-color: var(--white0_t70);
       box-shadow: 0 1px 15px var(--grey3);
     }
 
