--- a/src/styles/templates/posts.scss
+++ b/src/styles/templates/posts.scss
@@ -1,24 +1,39 @@
-.page-tags {
-  width: 100%;
+.template-posts {
   > .tag-list {
     width: 100%;
     display: flex;
     flex-flow: row wrap;
-    margin: 2rem 0;
+    margin-bottom: 0.8rem;
     padding: 0;
     list-style: none;
 
     > .tag-list-item {
       flex-shrink: 0;
+      margin-bottom: 0.8rem;
+
+      &:not(:last-child) {
+        margin-right: 0.4rem;
+      }
 
       > .link {
         display: flex;
         align-items: center;
-        margin: 0 0.8rem 1rem 0;
         padding: 0.6rem 0.8rem;
         border: 1px solid var(--grey2);
         border-radius: 24px;
         transition: box-shadow 0.25s;
+        font-size: 1rem;
+
+        > .name {
+          transition: text-shadow 0.25s;
+        }
+
+        > .number-of-posts {
+          margin-left: 0.4rem;
+          color: var(--grey1);
+          font-size: 0.8em;
+          transition: text-shadow 0.25s;
+        }
 
         @media screen and (min-width: 800px) {
           &:hover {
@@ -30,17 +45,16 @@
             }
           }
         }
+      }
 
-        > .name {
-          margin-right: 0.4rem;
-          font-size: 1.2rem;
-          transition: text-shadow 0.25s;
-        }
+      &.selected {
+        > .link {
+          background-color: var(--blue0);
+          border: 1px solid var(--blue0);
 
-        > .number-of-posts {
-          color: var(--grey1);
-          font-size: 0.9rem;
-          transition: text-shadow 0.25s;
+          > * {
+            color: var(--white_fixed);
+          }
         }
       }
     }
