--- a/src/styles/templates/post.scss
+++ b/src/styles/templates/post.scss
@@ -88,9 +88,8 @@
     }
   }
 
-  > section {
+  > .markdown {
     font-size: 16px;
-    line-height: 24px;
 
     ul,
     ol {
@@ -121,8 +120,56 @@
       background-color: var(--grey4);
     }
 
+    --color-code: #f2f2f2;
+    --color-code-block: #fafafa;
+    --color-code-highlight: rgba(0, 0, 0, 0.05);
+    --color-code-highlight-border: rgba(0, 0, 0, 0.2);
+
+    @media (prefers-color-scheme: dark) {
+      --color-code: #3a3a3a;
+      --color-code-block: #242424;
+      --color-code-highlight: rgba(255, 255, 255, 0.05);
+      --color-code-highlight-border: rgba(255, 255, 255, 0.2);
+    }
+
+    pre,
+    code {
+      font-size: 14px;
+      line-height: 1.65;
+      font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
+      background-color: var(--color-code-block);
+    }
     pre {
-      border-radius: 10px;
+      border: 1px solid var(--grey3);
+    }
+    pre.grvsc-container {
+      margin: var(--sizing-md) 0;
+    }
+
+    .grvsc-line-highlighted::before {
+      background-color: var(--color-code-highlight) !important;
+      box-shadow: inset 4px 0 0 0 var(--color-code-highlight-border) !important;
+    }
+    *:not(pre) > code {
+      background-color: var(--color-code);
+      padding: 0.2rem 0.4rem;
+      margin: 0;
+      border-radius: 3px;
+    }
+
+    .iframe-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%;
+      box-sizing: border-box;
+
+      > iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
