fix code font-size

--- a/src/styles/templates/post.scss
+++ b/src/styles/templates/post.scss
@@ -92,7 +92,7 @@
     font-size: 16px;
 
     h1 {
-      font-size: 28px;
+      font-size: 1.75em;
     }
 
     ul,
@@ -139,7 +139,7 @@
 
     pre,
     code {
-      font-size: 14px;
+      font-size: 13px;
       line-height: 1.65;
       font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
       background-color: var(--color-code-block);
