--- a/src/styles/pages/404.scss
+++ b/src/styles/pages/404.scss
@@ -17,18 +17,22 @@
     text-align: center;
   }
 
-  > .link-to-home {
-    padding: 0.7rem 2rem;
-    border: 1px solid var(--grey2);
-    border-radius: 24px;
-    font-size: 1.3rem;
-    text-align: center;
-    transition: text-shadow 0.2s, box-shadow 0.2s;
+  > .links {
+    display: flex;
 
-    @media screen and (min-width: 800px) {
-      &:hover {
-        box-shadow: 0px 0px 6px var(--grey3);
-        text-shadow: 1px 1px 3px var(--grey3);
+    > .link-to-home {
+      padding: 0.7rem 2rem;
+      border: 1px solid var(--grey2);
+      border-radius: 24px;
+      font-size: 1.3rem;
+      text-align: center;
+      transition: text-shadow 0.2s, box-shadow 0.2s;
+
+      @media screen and (min-width: 800px) {
+        &:hover {
+          box-shadow: 0px 0px 6px var(--grey3);
+          text-shadow: 1px 1px 3px var(--grey3);
+        }
       }
     }
   }
