--- a/src/styles/templates/post.scss
+++ b/src/styles/templates/post.scss
@@ -122,7 +122,7 @@
       padding: 0.1rem 1.5rem;
       border-radius: 10px;
       background-color: var(--grey4);
-      font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
+      font-family: inherit;
     }
 
     --color-code: #f2f2f2;
@@ -139,7 +139,14 @@
 
     pre {
       border: 1px solid var(--grey3);
+      border-radius: 10px;
       background-color: var(--color-code-block);
+
+      -ms-overflow-style: none;
+      overflow: -moz-scrollbars-none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
 
       * {
         font-size: 13px;
@@ -155,11 +162,13 @@
       background-color: var(--color-code-highlight) !important;
       box-shadow: inset 4px 0 0 0 var(--color-code-highlight-border) !important;
     }
+
     *:not(pre) > code {
       background-color: var(--color-code);
       padding: 0.2rem 0.4rem;
       margin: 0;
-      border-radius: 3px;
+      border-radius: 4px;
+      font-family: inherit;
     }
 
     .iframe-container {
