--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -1,7 +1,5 @@
 .component-layout {
   width: 100%;
-  max-width: 700px;
-  margin: 0 auto;
 
   > * {
     box-sizing: border-box;
@@ -10,79 +8,106 @@
   > header {
     position: sticky;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 99999999;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 1rem;
-    backdrop-filter: blur(8px);
-    background-color: var(--white0);
-    transition: background-color 0.4s, box-shadow 0.4s;
 
-    @media screen and (min-width: 800px) {
-      top: 0.5rem;
-      border-radius: 20px;
-    }
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+
+    padding: 1rem 1.2rem;
+
+    backdrop-filter: blur(12px);
+
+    border-bottom: 1px solid transparent;
+
+    transition: border-bottom 0.4s;
 
     &.scrolled {
-      background-color: var(--white0_t70);
-      box-shadow: 0 1px 15px var(--grey3);
+      border-bottom: 1px solid var(--border0);
     }
 
-    > .link-to-home {
-      margin-right: auto;
-      color: var(--grey0);
-      font-size: 2rem;
-      font-weight: 700;
-      transition: color 0.15s;
+    > .content {
+      max-width: 800px;
+      width: 100%;
 
-      &:hover {
-        color: var(--grey1);
-      }
-    }
+      display: flex;
+      align-items: center;
 
-    > .link-to-tags,
-    > .link-to-about {
-      margin-right: 1rem;
-      color: var(--grey0);
-      font-size: 1.3rem;
-      font-weight: 400;
-      transition: color 0.15s;
+      > .link-to-home {
+        margin-right: auto;
 
-      &:hover {
-        color: var(--grey1);
-      }
-    }
+        > h1 {
+          margin: 0;
 
-    > .link-to-github {
-      width: 2.2rem;
-      height: 2.2rem;
+          color: var(--primary0);
+          font-size: 1.5rem;
+          font-weight: 700;
 
-      &:hover > svg {
-        color: var(--grey1);
+          transition: color 0.15s;
+
+          &:hover {
+            color: var(--primary1);
+          }
+        }
       }
 
-      > svg {
-        width: 100%;
-        height: 100%;
-        color: var(--grey0);
+      > .link-to-about,
+      > .link-to-github {
+        margin-right: 0.8rem;
+
+        color: var(--text1);
+        font-size: 1.2rem;
+        font-weight: 400;
+
         transition: color 0.15s;
+
+        &:hover {
+          color: var(--text2);
+        }
       }
     }
   }
 
   > main {
-    padding: 1.6rem;
-    overflow-x: hidden;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+
+    padding: 0 1.6rem;
+
+    > .content {
+      max-width: 700px;
+      width: 100%;
+
+      overflow-x: hidden;
+    }
   }
 
   > footer {
     width: 100%;
-    text-align: center;
-    font-size: 1.2rem;
 
-    > a {
-      font-weight: 700;
+    display: flex;
+    justify-content: center;
+
+    padding: 4rem 1.2rem;
+
+    text-align: center;
+
+    > .content {
+      max-width: 800px;
+      width: 100%;
+
+      > a {
+        font-weight: 700;
+
+        &:hover {
+          color: var(--text1);
+        }
+      }
     }
   }
 }
