--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -4,32 +4,38 @@
 @import "prismjs/themes/prism-tomorrow.css" (prefers-color-scheme: dark);
 
 :root {
-  --white_fixed: rgba(255, 255, 255, 1);
-  --black_fixed: rgba(36, 36, 36, 1);
-  --white0: rgba(255, 255, 255, 1);
-  --white0_t70: rgba(255, 255, 255, 0.7);
-  --black0: rgba(36, 36, 36, 1);
-  --grey0: rgba(132, 132, 132, 1);
-  --grey1: rgba(164, 164, 164, 1);
-  --grey2: rgba(189, 189, 189, 1);
-  --grey3: rgba(216, 216, 216, 1);
-  --grey4: rgba(239, 239, 239, 1);
-  --grey5: rgba(242, 242, 242, 1);
-  --blue0: rgba(88, 172, 250, 1);
-  --blue1: rgba(129, 190, 247, 1);
-  --orange0: rgba(219, 169, 1, 1);
-  --orange1: rgba(247, 211, 88, 1);
+  --black: #141414;
+
+  --background0: #ffffff;
+  --background1: #f5f5f5;
+
+  --text0: #141414;
+  --text1: #666666;
+  --text2: #8f8f8f;
+
+  --shadow0: #c2c2c2;
+
+  --border0: #e0e0e0;
+  --border1: #c2c2c2;
+
+  --primary0: #dcbcd4;
+  --primary1: #d5afcb;
+  --primary2: #cea1c2;
+  --primary3: #c794b9;
+  --primary4: #c087b0;
 
   @media (prefers-color-scheme: dark) {
-    --white0: rgba(36, 36, 36, 1);
-    --white0_t70: rgba(36, 36, 36, 0.7);
-    --black0: rgba(210, 210, 210, 1);
-    --grey0: rgba(160, 160, 160, 1);
-    --grey1: rgba(140, 140, 140, 1);
-    --grey2: rgba(120, 120, 120, 1);
-    --grey3: rgba(100, 100, 100, 1);
-    --grey4: rgba(80, 80, 80, 1);
-    --grey5: rgba(60, 60, 60, 1);
+    --background0: #2f3437;
+    --background1: #383e42;
+
+    --text0: #f5f5f5;
+    --text1: #c2c2c2;
+    --text2: #8f8f8f;
+
+    --shadow0: #677179;
+
+    --border0: #474747;
+    --border1: #666666;
   }
 }
 
@@ -37,19 +43,21 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background-color: var(--white0);
-  color: var(--black0);
+
+  background-color: var(--background0);
+
+  color: var(--text0);
+  font-size: 100%;
   font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
     "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", sans-serif;
-  line-height: 1.65;
-
-  font-size: 12px;
-  @media screen and (min-width: 800px) {
-    font-size: 16px;
-  }
+  line-height: 1.3;
 
   a {
-    color: var(--black0);
+    color: var(--text0);
     text-decoration: none;
+  }
+
+  * {
+    box-sizing: border-box;
   }
 }
