--- a/src/styles/templates/posts.scss
+++ b/src/styles/templates/posts.scss
@@ -1,58 +1,54 @@
 .template-posts {
   > .tag-list {
     width: 100%;
+
     display: flex;
     flex-flow: row wrap;
+
     margin-bottom: 0.8rem;
     padding: 0;
+
     list-style: none;
 
     > .tag-list-item {
       flex-shrink: 0;
+
       margin-bottom: 0.5rem;
 
+      border-bottom: 1px solid transparent;
+
+      transition: border-bottom 0.15s;
+
       &:not(:last-child) {
-        margin-right: 0.3rem;
+        margin-right: 1rem;
+      }
+
+      &:hover,
+      &.selected {
+        border-bottom: 1px solid var(--border1);
+
+        > .link {
+          color: var(--text0);
+
+          > .number-of-posts {
+            color: var(--text1);
+          }
+        }
       }
 
       > .link {
         display: flex;
         align-items: center;
-        padding: 0.2rem 0.8rem;
-        border: 1px solid var(--grey2);
-        border-radius: 24px;
-        transition: box-shadow 0.25s;
 
-        > .name {
-          transition: text-shadow 0.25s;
-        }
+        color: var(--text1);
+        font-weight: 400;
+
+        transition: color 0.15s;
 
         > .number-of-posts {
           margin-left: 0.4rem;
-          color: var(--grey1);
-          transition: text-shadow 0.25s;
-        }
 
-        @media screen and (min-width: 800px) {
-          &:hover {
-            box-shadow: 0px 0px 6px var(--grey3);
-
-            > .name,
-            > .number-of-posts {
-              text-shadow: 1px 1px 3px var(--grey3);
-            }
-          }
-        }
-      }
-
-      &.selected {
-        > .link {
-          background-color: var(--blue0);
-          border: 1px solid var(--blue0);
-
-          > * {
-            color: var(--white_fixed);
-          }
+          color: var(--text2);
         }
       }
     }
