--- a/src/styles/components/post-list.scss
+++ b/src/styles/components/post-list.scss
@@ -19,27 +19,29 @@
       display: flex;
       flex-direction: column;
 
-      > .responsive-thumbnail > .content > .thumbnail {
-        transition: transform 0.4s;
-      }
-
-      > .title,
-      > .published-at,
-      > .description {
-        transition: text-shadow 0.4s, transform 0.4s;
-      }
-
-      &:hover {
+      @media (hover: hover) {
         > .responsive-thumbnail > .content > .thumbnail {
-          transform: scale(1.05);
+          transition: transform 0.4s;
         }
 
         > .title,
         > .published-at,
         > .description {
-          text-shadow: 1px 1px 2px var(--shadow0);
+          transition: text-shadow 0.4s, transform 0.4s;
+        }
 
-          transform: translateY(-4px);
+        &:hover {
+          > .responsive-thumbnail > .content > .thumbnail {
+            transform: scale(1.05);
+          }
+
+          > .title,
+          > .published-at,
+          > .description {
+            text-shadow: 1px 1px 2px var(--shadow0);
+
+            transform: translateY(-4px);
+          }
         }
       }
 
@@ -77,17 +79,20 @@
 
       > .title {
         margin: 0;
+
         font-size: 1.6rem;
       }
 
       > .published-at {
         margin: 0.8rem 0;
+
         color: var(--text2);
         font-size: 0.9rem;
       }
 
       > .description {
         margin: 0;
+
         color: var(--text1);
         font-size: 1.1rem;
       }
