--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -6,13 +6,19 @@
 :root {
   --black: #0d1117;
   --white: #ededed;
-  --blue: #60aae0;
+  --blue: #1e88e5;
+}
+
+@theme {
+  --color-black: var(--black);
+  --color-white: var(--white);
+  --color-blue: var(--blue);
 }
 
 html,
 body {
-  color: var(--white);
-  background: var(--black);
+  color: var(--black);
+  background: var(--white);
   font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
     "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", sans-serif;
 }
